@@ -299,9 +299,10 @@ public class PolytopePuzzleDescription implements PuzzleDescription {
         // so that will give us the sticker-to-original-face-index mapping.
         // Also mark each vertex with its vertex index... etc.
         {
-            for (int iDim = 0; iDim < originalElements.length; ++iDim)
-            for (int iElt = 0; iElt < originalElements[iDim].length; ++iElt)
-                originalElements[iDim][iElt].aux = new Integer(iElt);
+            for (int iDim = 0; iDim < originalElements.length; ++iDim) {
+                for (int iElt = 0; iElt < originalElements[iDim].length; ++iElt)
+                    originalElements[iDim][iElt].aux = Integer.valueOf(iElt);
+            }
         }
 
         //
@@ -665,7 +666,7 @@ public class PolytopePuzzleDescription implements PuzzleDescription {
             for (int iSticker = 0; iSticker < nStickers; ++iSticker)
             {
                 CSG.cgOfVerts(stickerCentersD[iSticker], stickers[iSticker]);
-                stickerCentersHashTable.put(stickerCentersD[iSticker], new Integer(iSticker));
+                stickerCentersHashTable.put(stickerCentersD[iSticker], iSticker);
             }
         }
 
